--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <div class="content">
         <header>
           <h2>Cậu thương tớ có phải không nào ._.</h2>
-          <h4>Nếu cậu ko trả lời mà thoát ra tức là muốn làm ny tớ rùi đó nha :v </h4>
+          <h4>Nếu cậu ko trả lời mà thoát ra tức là muốn làm ny tớ rùi đó nha :v
+          <pre><h4><a href="https://www.facebook.com/RRegiment2901" target="_blank">Facebook.
+        </pre></h4></a></h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">Thương cậu nhìu nhìu <333 </button>
         <button id="no" type="button" class="btn btn-info btn-lg">Cậu mơ à :333 </button>
